# jxrlib

./: CMakeLists.txt  Makefile
common/include/: guiddef.h
image/encode/: strenc.c
jxrencoderdecoder/: JxrDecApp.c  JxrEncApp.c
jxrgluelib/: JXRGlue.h  JXRMeta.h
jxrtestlib/: JXRTest.c  JXRTestHdr.c  JXRTestTif.c
